# http_chat_beast

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  REAMDE.md  main.cpp
html/: chat_client.html
scripts/: build.sh
src/: beast.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  net.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
web/css/: style.css
web/html/: chat_client.html
